// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente correctamente con la imagen personalixada 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="https://hols.jpg"
/>
`;

exports[`ProductImage debe mostrar el componente con la image del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
